Ensure .right fills container and disclaimer text is centered and visible

--- a/form/styles.css
+++ b/form/styles.css
@@ -1,3 +1,8 @@
+.container{
+    display:flex;
+    height:100vh;
+    width: 100vw;
+}
 
 .left{
     position: relative;
@@ -56,6 +61,18 @@ h1{
     
 }
 
+.right{
+    flex:1;
+    background-color: white;
+    position: relative;
+    height: 100vh;
+}
 
-
-
+.disclaimer{
+    position: absolute;
+    color:black;
+    font-family: "poppins", sans-serif;
+    text-align: center;
+    width: 100%;
+    font-size: xx-large;
+}   
